# django-migrations-git-conflicts

./: LICENSE  README.md  runtests.py  setup.cfg
migrations_git_conflicts/: apps.py
migrations_git_conflicts/management/commands/: makemigrations.py
tests/: settings.py  test.py
tests/app_bar/: apps.py  models.py
tests/app_bar/migrations/: 0001_initial.py
tests/app_foo/: models.py
tests/app_foo/migrations/: 0001_initial.py  0002_auto_20200623_0645.py
